--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,36 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navcontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+  background-color: #e7ebeb;
+}
+.navcontainer h1 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 3.2rem;
+}
+.navcontainer .linkcontainer {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  width: 50%;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.navcontainer .navlink {
+  align-content: center;
+  text-decoration: none;
+  font-size: 16px;
+  color: black;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
