--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,33 @@
 // Navigation code here
+.navcontainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 100%;
+    background-color: rgb(231, 235, 235);
+        h1 {
+            margin-top: 5px;
+            margin-bottom: 5px;
+            font-size: 3.2rem;
+        }
+        .linkcontainer{
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            width: 50%;
+            margin-top: 5px;
+            margin-bottom: 10px;
+        }
+        .navlink{
+            align-content: center;
+            text-decoration: none;
+            font-size: 16px;
+            color: black;
+            
+        }
+
+}
