--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,16 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+.home .intro img {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
