--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,17 @@
     p {
       padding:0 15px;
     }
-  
+
+    img {   
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: center;
+      width: 100%;
+      margin: 20px 2.5%;
+      border-radius: 20px;
+      height: 100%;
+    }
   }
 
   .space-images {
