Added Mixins to mixins.less and implimented in home-page.less

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,14 +13,7 @@
     }
 
     img {   
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-content: center;
-      width: 100%;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
+      .header-image;
     }
   }
 
@@ -50,11 +43,7 @@
   }
 
   .walk {
-    margin-top: 60px;
-    border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
-    display: flex;
-    justify-content: center;
+    .walkcontainerstyling;
 
     .walk-text {
       width: 50%;
