--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,20 @@
+.header-image {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
+.walkcontainerstyling {
+  margin-top: 60px;
+  border-top: 1px solid #dee2e6;
+  padding: 50px 60px;
+  display: flex;
+  justify-content: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
