--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,19 @@
 // Mixins Here
+.header-image{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    margin: 20px 2.5%;
+    border-radius: 20px;
+    height: 100%;
+}
+
+.walkcontainerstyling{
+    margin-top: 60px;
+    border-top: 1px solid @main-border-color;
+    padding: 50px 60px;
+    display: flex;
+    justify-content: center;  
+}
