--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,3 +17,15 @@
     display: flex;
     justify-content: center;  
 }
+
+.signupbutton(@bgcolor,@fcolor, @fsize, @bradius){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: @bgcolor;
+    border-radius: @bradius;
+    color: @fcolor;
+    font-size: @fsize;
+    width: 35%;
+    height: 30px;
+}
