Created on hover effect for signup button.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,7 @@
     p {
       padding:0 15px;
     }
-
+    //Mixin
     img {   
       .header-image;
     }
@@ -41,7 +41,7 @@
       margin-top: 13px;
     }
   }
-
+  //Mixin
   .walk {
     .walkcontainerstyling;
 
@@ -55,7 +55,7 @@
       p {
         margin-bottom: 26px;
       }
-
+      //Parametric Mixin
       .btn {
         .signupbutton(black; white; 20px; 20px);
       }
