--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
   justify-content: center;
   align-content: center;
   width: 100%;
-  margin: 20px 2.5%;
-  border-radius: 20px;
+  margin: 0 auto;
+  border-radius: 10px;
   height: 100%;
 }
 .walkcontainerstyling {
@@ -184,7 +184,7 @@ p {
   align-content: center;
   align-items: center;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1000px;
   width: 100%;
   background-color: #e7ebeb;
 }
@@ -229,8 +229,8 @@ footer {
   justify-content: center;
   align-content: center;
   width: 100%;
-  margin: 20px 2.5%;
-  border-radius: 20px;
+  margin: 0 auto;
+  border-radius: 10px;
   height: 100%;
 }
 .home .space-images {
@@ -279,6 +279,10 @@ footer {
   font-size: 20px;
   width: 35%;
   height: 30px;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #ffffff;
+  color: #000000;
 }
 .home .walk .walk-img {
   width: 46%;
