--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,8 +5,8 @@
     justify-content: center;
     align-content: center;
     width: 100%;
-    margin: 20px 2.5%;
-    border-radius: 20px;
+    margin: 0 auto;
+    border-radius: 10px;
     height: 100%;
 }
 
@@ -28,4 +28,8 @@
     font-size: @fsize;
     width: 35%;
     height: 30px;
+    &:hover {
+        background-color: lighten(black, 100%);
+        color: darken(white, 100%);
+      }
 }
