--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,9 +18,12 @@
             display: flex;
             justify-content: space-between;
             align-content: center;
-            width: 50%;
+            width: 80%;
             margin-top: 5px;
             margin-bottom: 10px;
+            @media @phone {
+                width:80%;
+            }
         }
         .navlink{
             align-content: center;
