--- a/less/home-page.less
+++ b/less/home-page.less
@@ -21,6 +21,26 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    
+    .blast {
+      @media @phone {
+        width: 100%;
+        padding: 15px;
+        border-radius: 30px;
+      }
+    }
+
+    .sky {
+      @media @phone {
+        display: none;
+      }
+    }
+
+    .launch {
+      @media @phone {
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
@@ -48,6 +68,10 @@
     .walk-text {
       width: 50%;
 
+      @media @phone{
+        width: 100%;
+      }
+
       h3 {
         margin-bottom: 10px;
       }
@@ -64,6 +88,18 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone{
+        display:flex;
+        justify-content: center;
+        align-content: center;
+        order: -1;
+        width: 100%;
+        padding: 15px;
+        border-radius: 30px;
+        margin: 0 auto;
+        height: 100%;
+      }
       
       img {
         width: 100%;
