--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,11 +11,16 @@
 }
 
 .walkcontainerstyling{
+    display: flex;
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
-    display: flex;
     justify-content: center;  
+    @media @phone {
+        flex-direction: column;
+        margin-top: 0;
+        padding: 15px 15px;
+    }
 }
 
 .signupbutton(@bgcolor,@fcolor, @fsize, @bradius){
@@ -28,8 +33,13 @@
     font-size: @fsize;
     width: 35%;
     height: 30px;
+    cursor: pointer;
     &:hover {
         background-color: lighten(black, 100%);
         color: darken(white, 100%);
       }
+
+    @media @phone{
+        width:100%;
+    }
 }
