--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,8 +6,10 @@
     align-content: center;
     align-items: center;
     margin: 0 auto;
-    max-width: 1000px;
+    position: fixed;
+    top: 0;
     width: 100%;
+    opacity: 0.9;
     background-color: rgb(231, 235, 235);
         h1 {
             margin-top: 5px;
@@ -18,7 +20,7 @@
             display: flex;
             justify-content: space-between;
             align-content: center;
-            width: 80%;
+            width: 40%;
             margin-top: 5px;
             margin-bottom: 10px;
             @media @phone {
